Solucionado nuevo titulo
toda la traduccion,
Modales del titulo
Cambien Tecnologias y proyectos

--- a/english.html
+++ b/english.html
@@ -141,39 +141,50 @@
         <!---Hacer Modales solo para los titulos, falta titulo de universidad, ---->
         <h2>Professional development</h2>
       </section>
+
       <div class="col-12 desarrollop">
-        <div class=" botondescargar">
-          <a class="btn  btn-success " role="button" href="document/NAICEIRY.pdf">Discharge Resume</a>
-        </div>
-        <!-- fabricacion del modal https://www.youtube.com/watch?v=c3MbFWr-NT4  
+          <div class=" botondescargar">
+            <a class="btn  btn-success " role="button" href="document/NAICEIRYenglish.pdf">Discharge Resume</a>
+          </div>
+           <!-- fabricacion del modal https://www.youtube.com/watch?v=c3MbFWr-NT4  
                                                                                                                 GOOGLE FONT ME ENCANTA -->
-        <div class="profesional ">
-          <!-- ---------------------------------------- -->
-          <a href="#" class="cta "> <img src="img/Profesional/FullStack.jpg"></a>
-          <a href="#" class="ctag"> <img src="img/Profesional/googleAdwars.jpg"> </a>
-          <a href="#" class="ctaa"> <img src="img/Profesional/atencionalcliente.jpg"></a>
+          <div class="profesional ">
+            <!-- ---------------------------------------- -->
+            <a href="#" class="cta "> <img src="img/Profesional/FullStack.jpg"></a>
+            <a href="#" class="ctag"> <img src="img/Profesional/googleAdwars.jpg"> </a>
+            <a href="#" class="ctaa"> <img src="img/Profesional/atencionalcliente.jpg"></a>
+            <a href="#" class="ctajs"> <img src="img/Profesional/JSProfesional.png"></a>
+          </div>
 
-        </div>
+          <!-- modales---->
+          <div class="modal-container">
+            <div class=" modal-close">
+              <img src="img/Profesional/FullStack.jpg">
+              <p class="close">X</p>
+            </div>
+          </div>
 
-        <!-- modales---->
-        <div class="modal-container">
-          <div class=" modal-close">
-            <img src="img/Profesional/FullStack.jpg">
-            <p class="close">X</p>
+          <div class="modal-containerG">
+            <div class=" modal-close">
+              <img src="img/Profesional/googleAdwars.jpg">
+              <p class="closeG">X</p>
+            </div>
           </div>
-        </div>
-        <div class="modal-containerG">
-          <div class=" modal-close">
-            <img src="img/Profesional/googleAdwars.jpg">
-            <p class="closeG">X</p>
+
+          <div class="modal-containerA">
+            <div class=" modal-close">
+              <img src="img/Profesional/atencionalcliente.jpg">
+              <p class="closeA">X</p>
+            </div>
           </div>
-        </div>
-        <div class="modal-containerA">
-          <div class=" modal-close">
-            <img src="img/Profesional/atencionalcliente.jpg">
-            <p class="closeA">X</p>
+
+          <div class="modal-containerjs">
+            <div class=" modal-close">
+              <img src="img/Profesional/JSProfesional.png">
+              <p class="closejs">X</p>
+            </div>
           </div>
-        </div>
+
       </div>
 
       <!---PORTAFOLIO--->
@@ -185,68 +196,113 @@
                                   europa juarez, starwar ,presupuesto</p> -->
       <!-- Video explicativo del efecto:  https://www.youtube.com/watch?v=Z5MoBm99w1Q&t=322s -->
 
-      <div class="contproyectos">
-        <div class="contproyectos1 d-flex">
-          <!-- ________________WELLPUT_______________________________ -->
-          <div class="contenedor">
-            <figure>
-              <img src="img/portafolio/WPlogo.png" alt="" />
-              <div class="capa">
-                <h3>Wellput</h3>
-                <p>Long-term room rental</p>
-                <a href="https://w3llput.herokuapp.com/"> <img src="img/globe2.svg" class="logospequeños"></a>
-                <a href="https://github.com/Naiceiry/WellPut"> <img src="img/github.svg" class="logospequeños"></a>
-              </div>
-            </figure>
+  <div class="contproyectos">
+    <!----Inicio Proyectos de 4geeks-->
+    <h2>Professional projects private companies</h2>
+    <div class="contproyectos1 d-flex">
+      <!-- ________________Capibara_______________________________ -->
+      <div class="contenedor">
+        <figure>
+          <img src="img/portafolio/capibara.jpeg" alt="" />
+          <div class="capa">
+            <h3>Capibara International</h3>
+            <p>Shipping and Removals</p>
+            <a href="https://capibarainternacional.netlify.app/index.html"> <img src="img/globe2.svg"
+                class="logospequeños"></a>
+            <a href="https://github.com/Naiceiry/capibara"> <img src="img/github.svg" class="logospequeños"></a>
           </div>
-
-          <!-- _________________RandonCard______________________________ -->
-          <div class="contenedor">
-            <figure>
-              <img src="img/portafolio/RandonCard.png" alt="" />
-              <div class="capa">
-                <h3>RandonCard</h3>
-                <p>HTML - JS - CSS</p><br>
-                <a href="https://github.com/Naiceiry/RandomCard"> <img src="img/github.svg" class="logospequeño1"></a>
-              </div>
-            </figure>
-          </div>
-          <!-- _______________________ToDoList________________________ -->
-          <div class="contenedor">
-            <figure>
-              <img src="img/portafolio/To-Do-List-Logo-for-Facebook.jpg" alt="" />
-              <div class="capa">
-                <h3>ToDoList</h3>
-                <p>To Do List</p>
-                <a href="https://github.com/Naiceiry/ToDoList"> <img src="img/github.svg" class="logospequeño1"></a>
-              </div>
-            </figure>
-          </div>
-        </div>
-        <div class="contproyectos2 d-flex">
-          <!-- _______________________Trafic Light________________________ -->
-          <div class="contenedor">
-            <figure>
-              <img src="img/portafolio/traficligh.png" alt="" />
-              <div class="capa">
-                <h3>Trafic Light</h3>
-                <a href="https://github.com/Naiceiry/TraficLigh"> <img src="img/github.svg" class="logospequeño1"></a>
-              </div>
-            </figure>
-          </div>
-
-          <!-- _______________________starward________________________ -->
-          <div class="contenedor">
-            <figure>
-              <img src="img/portafolio/starward.jpg" alt="" />
-              <div class="capa">
-                <h3>Trafic Light</h3>
-                <a href="https://github.com/Naiceiry/starward"> <img src="img/github.svg" class="logospequeño1"></a>
-              </div>
-            </figure>
-          </div>
-        </div>
+        </figure>
       </div>
+  
+      <!-- _________________Inmobiliaria______________________________ -->
+      <div class="contenedor">
+        <figure>
+          <img src="img/portafolio/cs.jpg" alt="" />
+          <div class="capa">
+            <h3>Grupo CS </h3>
+            <p>real estate</p><br>
+            <a href="https://grupo-c-s.webnode.es"> <img src="img/globe2.svg" class="logospequeños"></a>
+          </div>
+        </figure>
+      </div>
+      <!-- _______________________FaceWorldViajes________________________ -->
+      <div class="contenedor">
+        <figure>
+          <img src="img/portafolio/fwv.jpg" alt="" />
+          <div class="capa">
+            <h3>FaceWorld</h3>
+            <p>Travel agency</p>
+            <a href="https://faceworld-agencia-de-viajes.webnode.es/"> <img src="img/globe2.svg"
+                class="logospequeños"></a>
+          </div>
+        </figure>
+      </div>
+  
+    </div>
+    <!---fin proyectos---->
+    <!---*****************************---->
+    <!---********************************---->
+    <!----Inicio Proyectos de 4geeks-->
+    <h2>4GEEKS academy</h2>
+    <div class="contproyectos1 d-flex">
+      <!-- ________________WELLPUT_______________________________ -->
+      <div class="contenedor">
+        <figure>
+          <img src="img/portafolio/WPlogo.png" alt="" />
+          <div class="capa">
+            <h3>Wellput</h3>
+            <p>Long-term room rental</p>
+            <a href="https://w3llput.herokuapp.com/"> <img src="img/globe2.svg" class="logospequeños"></a>
+            <a href="https://github.com/Naiceiry/WellPut"> <img src="img/github.svg" class="logospequeños"></a>
+          </div>
+        </figure>
+      </div>
+  
+      <!-- _________________RandonCard______________________________ -->
+      <div class="contenedor">
+        <figure>
+          <img src="img/portafolio/RandonCard.png" alt="" />
+          <div class="capa">
+            <h3>RandonCard</h3>
+            <p>HTML - JS - CSS</p><br>
+            <a href="https://github.com/Naiceiry/RandomCard"> <img src="img/github.svg" class="logospequeño1"></a>
+          </div>
+        </figure>
+      </div>
+      <!-- _______________________ToDoList________________________ -->
+      <div class="contenedor">
+        <figure>
+          <img src="img/portafolio/To-Do-List-Logo-for-Facebook.jpg" alt="" />
+          <div class="capa">
+            <h3>ToDoList</h3>
+            <a href="https://github.com/Naiceiry/ToDoList"> <img src="img/github.svg" class="logospequeño1"></a>
+          </div>
+        </figure>
+      </div>
+      <!-- _______________________Trafic Light________________________ -->
+      <div class="contenedor">
+        <figure>
+          <img src="img/portafolio/traficligh.png" alt="" />
+          <div class="capa">
+            <h3>Trafic Light</h3>
+            <a href="https://github.com/Naiceiry/TraficLigh"> <img src="img/github.svg" class="logospequeño1"></a>
+          </div>
+        </figure>
+      </div>
+  
+      <!-- _______________________starward________________________ -->
+      <div class="contenedor">
+        <figure>
+          <img src="img/portafolio/starward.jpg" alt="" />
+          <div class="capa">
+            <h3>starwar</h3>
+            <a href="https://github.com/Naiceiry/starward"> <img src="img/github.svg" class="logospequeño1"></a>
+          </div>
+        </figure>
+      </div>
+    </div>
+    <!---fin proyectos---->
+  </div>
       <!---CONTACTO--->
       <section class="secciones" id="contacto">
         <h2>Contact </h2>
