--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
         <h2>Desarrollo Profesional</h2>
       </section>
       <div class="col-12 desarrollop">
+
         <div class=" botondescargar">
-          <a class="btn  btn-success " role="button" href="document/NAICEIRY.pdf">Descargar
-            Curriculum</a>
+          <a class="btn  btn-success " role="button" href="document/NAICEIRY.pdf">Descargar Curriculum</a>
         </div>
         <!-- fabricacion del modal https://www.youtube.com/watch?v=c3MbFWr-NT4  
                                                                                                                 GOOGLE FONT ME ENCANTA -->
@@ -153,7 +153,7 @@
           <a href="#" class="cta "> <img src="img/Profesional/FullStack.jpg"></a>
           <a href="#" class="ctag"> <img src="img/Profesional/googleAdwars.jpg"> </a>
           <a href="#" class="ctaa"> <img src="img/Profesional/atencionalcliente.jpg"></a>
-
+          <a href="#" class="ctajs"> <img src="img/Profesional/JSProfesional.png"></a>
         </div>
 
         <!-- modales---->
@@ -163,18 +163,28 @@
             <p class="close">X</p>
           </div>
         </div>
+
         <div class="modal-containerG">
           <div class=" modal-close">
             <img src="img/Profesional/googleAdwars.jpg">
             <p class="closeG">X</p>
           </div>
         </div>
+
         <div class="modal-containerA">
           <div class=" modal-close">
             <img src="img/Profesional/atencionalcliente.jpg">
             <p class="closeA">X</p>
           </div>
         </div>
+
+        <div class="modal-containerjs">
+          <div class=" modal-close">
+            <img src="img/Profesional/JSProfesional.jpg">
+            <p class="closejs">X</p>
+          </div>
+        </div>
+
       </div>
 
       <!---PORTAFOLIO--->
@@ -187,6 +197,51 @@
       <!-- Video explicativo del efecto:  https://www.youtube.com/watch?v=Z5MoBm99w1Q&t=322s -->
 
       <div class="contproyectos">
+        <!----Inicio Proyectos de 4geeks-->
+        <h2>Proyectos profesionales empresas particulares</h2>
+        <div class="contproyectos1 d-flex">
+          <!-- ________________Capibara_______________________________ -->
+          <div class="contenedor">
+            <figure>
+              <img src="img/portafolio/capibara.jpeg" alt="" />
+              <div class="capa">
+                <h3>Capibara Internacional</h3>
+                <p>Portes y Mudanzas</p>
+                <a href="https://capibarainternacional.netlify.app/index.html"> <img src="img/globe2.svg" class="logospequeños"></a>
+                <a href="https://github.com/Naiceiry/capibara"> <img src="img/github.svg" class="logospequeños"></a>
+              </div>
+            </figure>
+          </div>
+        
+          <!-- _________________Inmobiliaria______________________________ -->
+          <div class="contenedor">
+            <figure>
+              <img src="img/portafolio/cs.jpg" alt="" />
+              <div class="capa">
+                <h3>Grupo CS </h3>
+                <p>inmobiliaria</p><br>
+                <a href="https://grupo-c-s.webnode.es"> <img src="img/globe2.svg" class="logospequeños"></a>
+              </div>
+            </figure>
+          </div>
+          <!-- _______________________FaceWorldViajes________________________ -->
+          <div class="contenedor">
+            <figure>
+              <img src="img/portafolio/fwv.jpg" alt="" />
+              <div class="capa">
+                <h3>FaceWorld</h3>
+                <p>Agencia de Viajes</p>
+                <a href="https://faceworld-agencia-de-viajes.webnode.es/"> <img src="img/globe2.svg" class="logospequeños"></a>
+              </div>
+            </figure>
+          </div>
+
+        </div>
+        <!---fin proyectos---->
+        <!---*****************************---->
+        <!---********************************---->
+        <!----Inicio Proyectos de 4geeks-->
+        <h2>4GEEKS academy</h2>
         <div class="contproyectos1 d-flex">
           <!-- ________________WELLPUT_______________________________ -->
           <div class="contenedor">
@@ -223,8 +278,6 @@
               </div>
             </figure>
           </div>
-        </div>
-        <div class="contproyectos2 d-flex">
           <!-- _______________________Trafic Light________________________ -->
           <div class="contenedor">
             <figure>
@@ -247,6 +300,7 @@
             </figure>
           </div>
         </div>
+        <!---fin proyectos---->
       </div>
       <!---CONTACTO--->
       <section class="secciones" id="contacto">
