Tamaño del modal modif

--- a/index.html
+++ b/index.html
@@ -157,28 +157,28 @@
         <!-- modales---->
         <div class="modal-container">
           <div class=" modal-close">
-            <img src="img/Profesional/FullStack.jpg">
+            <img src="img/Profesional/FullStack.jpg" class="imgmodal">
             <p class="close">X</p>
           </div>
         </div>
 
         <div class="modal-containerG">
           <div class=" modal-close">
-            <img src="img/Profesional/googleAdwars.jpg">
+            <img src="img/Profesional/googleAdwars.jpg"  class="imgmodal">
             <p class="closeG">X</p>
           </div>
         </div>
 
         <div class="modal-containerA">
           <div class=" modal-close">
-            <img src="img/Profesional/atencionalcliente.jpg">
+            <img src="img/Profesional/atencionalcliente.jpg"  class="imgmodal">
             <p class="closeA">X</p>
           </div>
         </div>
 
         <div class="modal-containerjs">
           <div class=" modal-close">
-            <img src="img/Profesional/JSProfesional.jpg">
+            <img src="img/Profesional/JSProfesional.jpg"  class="imgmodal">
             <p class="closejs">X</p>
           </div>
         </div>
