--- a/english.html
+++ b/english.html
@@ -146,13 +146,16 @@
           </div>
            <!-- fabricacion del modal https://www.youtube.com/watch?v=c3MbFWr-NT4  
                                                                                                                 GOOGLE FONT ME ENCANTA -->
-          <div class="profesional ">
-            <!-- ---------------------------------------- -->
-            <a href="#" class="cta "> <img src="img/Profesional/FullStack.jpg"></a>
-            <a href="#" class="ctag"> <img src="img/Profesional/googleAdwars.jpg"> </a>
-            <a href="#" class="ctaa"> <img src="img/Profesional/atencionalcliente.jpg"></a>
-            <a href="#" class="ctajs"> <img src="img/Profesional/JSProfesional.png"></a>
-          </div>
+            <div class="profesional ">
+              <!-- ---------------------------------------- -->
+              <a href="#" class="cta "> <img src="img/Profesional/FullStack.jpg"></a>
+              <a href="#" class="ctag"> <img src="img/Profesional/googleAdwars.jpg"> </a>
+              <a href="#" class="ctaa"> <img src="img/Profesional/atencionalcliente.jpg"></a>
+            </div>
+            <div class="profesional ">
+              <a href="#" class="ctajs"> <img src="img/Profesional/JSProfesional.png"></a>
+              <a href="#" class="ctaj8"> <img src="img/Profesional/java8.jpg"></a>
+            </div>
 
           <!-- modales---->
           <div class="modal-container">
@@ -182,7 +185,12 @@
               <p class="closejs">X</p>
             </div>
           </div>
-
+          <div class="modal-containerj8">
+            <div class=" modal-close">
+              <img src="img/Profesional/java8.jpg" class="imgmodal">
+              <p class="closej8">X</p>
+            </div>
+          </div>
       </div>
 
       <!---PORTAFOLIO--->
