--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
               <abbr title="Git"><img src="img/Programacion/git.png" class="habilidadesp"></abbr>
               <abbr title="Insomnia"><img src="img/Programacion/insomnia.png" class="habilidadesp"></abbr>
               <abbr title="Postman"><img src="img/Programacion/postman.png" class="habilidadesp"></abbr>
+              <abbr title="Postman"><img src="img/bitbucket.png" class="habilidadesp"></abbr>
           </div>
         </div>
         <div class="minicontent front">
@@ -150,8 +151,10 @@
           <!-- ---------------------------------------- -->
           <a href="#" class="cta "> <img src="img/Profesional/FullStack.jpg"></a>
           <a href="#" class="ctag"> <img src="img/Profesional/googleAdwars.jpg"> </a>
-          <a href="#" class="ctaa"> <img src="img/Profesional/atencionalcliente.jpg"></a>
+          <a href="#" class="ctaa"> <img src="img/Profesional/atencionalcliente.jpg"></a></div>
+          <div class="profesional ">
           <a href="#" class="ctajs"> <img src="img/Profesional/JSProfesional.png"></a>
+          <a href="#" class="ctaj8"> <img src="img/Profesional/java8.jpg"></a>
         </div>
 
         <!-- modales---->
@@ -183,6 +186,12 @@
           </div>
         </div>
 
+        <div class="modal-containerj8">
+          <div class=" modal-close">
+            <img src="img/Profesional/java8.jpg" class="imgmodal">
+            <p class="closej8">X</p>
+          </div>
+        </div>
       </div>
 
       <!---PORTAFOLIO--->
