navbar y footer terminados

--- a/english.html
+++ b/english.html
@@ -21,8 +21,12 @@
       <label for="check" class="checkbtn">
         <img src="img/portafolio/ham.png" alt="">
       </label>
-      <a href="english.html" class="enlace"><img src="img/women-in-tech.jpg" alt="" class="logo"></a>
-      <a href="index.html" class="aidioma"><img src="img/spanish.png" alt="" class="logo"></a>
+      <a href="index.html" class="enlace">
+        <img src="img/women-in-tech.jpg" alt="" class="logo">
+      </a>
+      <a href="index.html" class="enlace">
+        <img src="img/engspan.png" alt="" class="idioma">
+      </a>
       <ul>
         <li><a for="menu" class="active" href="#sobrem">About me</a></li>
         <li> <a href="#habi">My Abilities</a></li>
@@ -309,61 +313,56 @@
     </div>
     <!---fin proyectos---->
   </div>
-      <!---CONTACTO--->
-      <section class="secciones" id="contacto">
-        <h2>Contact </h2>
-      </section>
 
-      <div class="contenedorcontacto">
-        <div class="contacto"><a href="mailto:developernay@gmail.com"> <img src="img/gmail.jpg"></a> </div>
-        <div class="contacto"><a href="https://github.com/Naiceiry"> <img src="img/Programacion/goth.png"> </a></div>
-        <div class="contacto"><a href="https://api.whatsapp.com/send?phone=+34722406321"> <img src="img/wsapp.jpg"></a>
-        </div>
-        <div class="contacto"><a href="https://www.linkedin.com/in/naiceiry-morales-68681017a/"> <img
-              src="img/link.png"></a></div>
-      </div>
-    </div>
-
-    <!-- scripts -->
-    <script src="particles.js"></script>
-    <script src="app.js"></script>
-    <script src="main.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-      crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-      integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-      crossorigin="anonymous"></script>
-
-
-    <script src="jquery/jquery-3.3.1.min.js"></script>
-    <script src="popper/popper.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <!-- stats.js -->
-    <script src="js/lib/stats.js"></script>
-    <script>
-      var count_particles, stats, update;
-      stats = new Stats;
-      stats.setMode(0);
-      stats.domElement.style.position = 'absolute';
-      stats.domElement.style.left = '0px';
-      stats.domElement.style.top = '0px';
-      document.body.appendChild(stats.domElement);
-      count_particles = document.querySelector('.js-count-particles');
-      update = function () {
-        stats.begin();
-        stats.end();
-        if (window.pJSDom[0].pJS.particles && window.pJSDom[0].pJS.particles.array) {
-          count_particles.innerText = window.pJSDom[0].pJS.particles.array.length;
-        }
-        requestAnimationFrame(update);
-      };
-      requestAnimationFrame(update);
-    </script>
+</div>
+<div class="contenedorcontacto">
+  <div class="contacto"><a href="mailto:naiceirymp@gmail.com"> <img src="img/gmail.jpg"></a> </div>
+  <div class="contacto"><a href="https://github.com/Naiceiry"> <img src="img/Programacion/goth.png"> </a></div>
+  <div class="contacto"><a href="https://api.whatsapp.com/send?phone=+34622142067"> <img src="img/wsapp.jpg"></a>
   </div>
+  <div class="contacto"><a href="https://www.linkedin.com/in/naiceiry-morales-68681017a/"> <img
+        src="img/link.png"></a></div>
+</div>
+<!-- scripts -->
+<script src="particles.js"></script>
+<script src="app.js"></script>
+<script src="main.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+  crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+  integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+  crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+  integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+  crossorigin="anonymous"></script>
+
+
+<script src="jquery/jquery-3.3.1.min.js"></script>
+<script src="popper/popper.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<!-- stats.js -->
+<script src="js/lib/stats.js"></script>
+<script>
+  var count_particles, stats, update;
+  stats = new Stats;
+  stats.setMode(0);
+  stats.domElement.style.position = 'absolute';
+  stats.domElement.style.left = '0px';
+  stats.domElement.style.top = '0px';
+  document.body.appendChild(stats.domElement);
+  count_particles = document.querySelector('.js-count-particles');
+  update = function () {
+    stats.begin();
+    stats.end();
+    if (window.pJSDom[0].pJS.particles && window.pJSDom[0].pJS.particles.array) {
+      count_particles.innerText = window.pJSDom[0].pJS.particles.array.length;
+    }
+    requestAnimationFrame(update);
+  };
+  requestAnimationFrame(update);
+</script>
+</div>
 </body>
 
 </html>
