--- a/index.html
+++ b/index.html
@@ -21,14 +21,17 @@
       <label for="check" class="checkbtn">
         <img src="img/portafolio/ham.png" alt="">
       </label>
-      <a href="index.html" class="enlace"><img src="img/women-in-tech.jpg" alt="" class="logo"></a>
-      <a href="english.html" class="aidioma"><img src="img/english.png" alt="" class="logo"></a>
+      <a href="index.html" class="enlace">
+        <img src="img/women-in-tech.jpg" alt="" class="logo">
+      </a>
+      <a href="english.html" class="enlace">
+        <img src="img/engspan.png" alt="" class="idioma">
+      </a>
       <ul>
         <li><a for="menu" class="active" href="#sobrem">Sobre mi </a></li>
         <li> <a href="#habi">Mis Habilidades</a></li>
         <li><a href="#profesional">Desarrollo Profesional</a></li>
         <li> <a href="#portfolio">Proyectos</a></li>
-        <li><a href="#contacto">Contacto</a> </li>
       </ul>
     </nav>
 
@@ -145,21 +148,22 @@
         <div class=" botondescargar">
           <a class="btn  btn-success " role="button" href="document/NAICEIRY.pdf">Descargar Curriculum</a>
         </div>
-        <!-- fabricacion del modal https://www.youtube.com/watch?v=c3MbFWr-NT4  
-                                                                                                                GOOGLE FONT ME ENCANTA -->
+        <!-- fabricacion del modal https://www.youtube.com/watch?v=c3MbFWr-NT4    ---------------------------------------- -->
+         <div class="profesional "><a href="#" class="cta "> <img src="img/Profesional/FullStack.jpg"></a></div>
         <div class="profesional ">
           <!-- ---------------------------------------- -->
-          <a href="#" class="cta "> <img src="img/Profesional/FullStack.jpg"></a>
           <a href="#" class="ctag"> <img src="img/Profesional/googleAdwars.jpg"> </a>
-          <a href="#" class="ctaa"> <img src="img/Profesional/atencionalcliente.jpg"></a></div>
+          <a href="#" class="ctaa"> <img src="img/Profesional/atencionalcliente.jpg"></a>
+          <a href="#" class="ctajs"> <img src="img/Profesional/JSProfesional.png"></a></div>
           <div class="profesional ">
-          <a href="#" class="ctajs"> <img src="img/Profesional/JSProfesional.png"></a>
           <a href="#" class="ctaj8"> <img src="img/Profesional/java8.jpg"></a>
+          <a href="#" class="cta6"> <img src="img/Profesional/typescript.png"></a>
+          <a href="#" class="cta7"> <img src="img/Profesional/RespondiveDesign.png"></a>
         </div>
 
         <!-- modales---->
         <div class="modal-container">
-          <div class=" modal-close">
+          <div class="modal-close">
             <img src="img/Profesional/FullStack.jpg" class="imgmodal">
             <p class="close">X</p>
           </div>
@@ -190,6 +194,18 @@
           <div class=" modal-close">
             <img src="img/Profesional/java8.jpg" class="imgmodal">
             <p class="closej8">X</p>
+          </div>
+        </div>
+        <div class="modal-container6">
+          <div class=" modal-close">
+            <img src="img/Profesional/typescript.png" class="imgmodal">
+            <p class="close6">X</p>
+          </div>
+        </div>
+        <div class="modal-container7">
+          <div class=" modal-close">
+            <img src="img/Profesional/RespondiveDesign.png" class="imgmodal">
+            <p class="close7">X</p>
           </div>
         </div>
       </div>
@@ -309,21 +325,15 @@
         </div>
         <!---fin proyectos---->
       </div>
-      <!---CONTACTO--->
-      <section class="secciones" id="contacto">
-        <h2>Contacto </h2>
-      </section>
-
-      <div class="contenedorcontacto">
-        <div class="contacto"><a href="mailto:naiceirymp@gmail.com"> <img src="img/gmail.jpg"></a> </div>
-        <div class="contacto"><a href="https://github.com/Naiceiry"> <img src="img/Programacion/goth.png"> </a></div>
-        <div class="contacto"><a href="https://api.whatsapp.com/send?phone=+34622142067"> <img src="img/wsapp.jpg"></a>
-        </div>
-        <div class="contacto"><a href="https://www.linkedin.com/in/naiceiry-morales-68681017a/"> <img
-              src="img/link.png"></a></div>
-      </div>
     </div>
-
+    <div class="contenedorcontacto">
+      <div class="contacto"><a href="mailto:naiceirymp@gmail.com"> <img src="img/gmail.jpg"></a> </div>
+      <div class="contacto"><a href="https://github.com/Naiceiry"> <img src="img/Programacion/goth.png"> </a></div>
+      <div class="contacto"><a href="https://api.whatsapp.com/send?phone=+34622142067"> <img src="img/wsapp.jpg"></a>
+      </div>
+      <div class="contacto"><a href="https://www.linkedin.com/in/naiceiry-morales-68681017a/"> <img
+            src="img/link.png"></a></div>
+    </div>
     <!-- scripts -->
     <script src="particles.js"></script>
     <script src="app.js"></script>
